Fix twilight plot bands in dark mode.

--- a/common/src/main/webapp/less/variables-dark.less
+++ b/common/src/main/webapp/less/variables-dark.less
@@ -382,6 +382,8 @@
   --plot-text-color-disabled: #888888;
   --plot-grid-color: #2a2a2a;
   --plot-tooltip-background-color: #131313;
+  --plot-plot-band-color: #ffffff;
+  --plot-plot-band-opacity: 0.1;
 }
 
 .dark-theme() {
