--- a/common/src/main/webapp/less/variables-light.less
+++ b/common/src/main/webapp/less/variables-light.less
@@ -215,6 +215,8 @@
   --plot-text-color-disabled: #cccccc;
   --plot-grid-color: #e6e6e6;
   --plot-tooltip-background-color: #f7f7f7;
+  --plot-plot-band-color: #000000;
+  --plot-plot-band-opacity: 0.05;
 }
 
 .light-theme() {
